# bgfx-adventures

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/input/: CMakeLists.txt  Input.h  Job.cpp  Job.h  Manager.h
src/job/: CMakeLists.txt  Counter.h  Job.cpp  Job.h  Queue.cpp  Queue.h
src/render/: CMakeLists.txt  ExampleCube.h  ShaderLoader.cpp  ShaderLoader.h
